--- a/Gallery.Web/Views/Subject/Index.cshtml
+++ b/Gallery.Web/Views/Subject/Index.cshtml
@@ -5,102 +5,105 @@
 }
 
 <h2>Index</h2>
-
+Filter by:
+@using (Html.BeginForm("Index","Subject"))
+    {
+    @Html.DropDownList("filterChoice", null, new { onchange = "submit()" })
+    }
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Country)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nationality)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Reported)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AgeRestricted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsHidden)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AspNetRole.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AspNetUser.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.image.Filename)
-        </th>
-        <th></th>
-    </tr>
+        <table class="table">
+            <tr>
+                <th>
+                    
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DateOfBirth)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Country)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.City)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nationality)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DateCreated)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Reported)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.AgeRestricted)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.IsHidden)
+                </th>
+                
+                <th></th>
+            </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @if (item.galleries.Count > 0)
+            @foreach (var item in Model)
             {
-                @Html.ActionLink(item.Name, "Details", new {id = item.SubjectID})
-            }
-            else
-            {
-                @Html.DisplayFor(modelItem => item.Name)
-            }
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfBirth)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Country)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nationality)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateCreated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Reported)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AgeRestricted)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsHidden)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AspNetRole.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AspNetUser.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.image.Filename)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SubjectID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SubjectID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SubjectID })
-        </td>
-    </tr>
-}
+                
+                <tr>
+                    <td>
+                    @if (item.image != null)
+                    {
+                        var img = item.image.site_locations.Location + item.image.Filename + System.Configuration.ConfigurationManager.AppSettings["PImgTinyCrop"];
+                        <a href="@Url.Action("Details", "Subject", new {Id = item.SubjectID}, null)">
+                            <img src="@img" />
+                        </a>
+                    }
+                    </td>
+                    <td>
+                        @if (item.galleries.Count > 0)
+                        {
+                            @Html.ActionLink(item.Name, "Details", new {id = item.SubjectID})
+                        }
+                        else
+                        {
+                            @Html.DisplayFor(modelItem => item.Name)
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateOfBirth)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Country)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.City)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nationality)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateCreated)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Reported)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AgeRestricted)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IsHidden)
+                    </td>
+                    
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new {id = item.SubjectID}) |
+                        @Html.ActionLink("Details", "Details", new {id = item.SubjectID}) |
+                        @Html.ActionLink("Delete", "Delete", new {id = item.SubjectID})
+                    </td>
+                </tr>
+                
 
-</table>
+            }
+        </table>
